--- a/GameOfThronesAPI/GameOfThronesAPI.csproj
+++ b/GameOfThronesAPI/GameOfThronesAPI.csproj
@@ -93,6 +93,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Exceptions\EmptyJsonException.cs" />
+    <Compile Include="Exceptions\RedirectMainException.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\House.cs" />
@@ -185,6 +187,7 @@
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
