--- a/GameOfThronesAPI/GameOfThronesAPI.csproj
+++ b/GameOfThronesAPI/GameOfThronesAPI.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\House.cs" />
     <Compile Include="Models\Linker.cs" />
+    <Compile Include="Models\PagedResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FrozenUtils.cs" />
     <Compile Include="Services\ThroneService.cs" />
